Fixing social links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="logo">Adarsh Gupta</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">Book/Course Shelf</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -59,27 +59,20 @@
                                 <p class="achievement-section">
                                     <span class="achievement-title">🏆 Previous Experience:</span>
                                     <ul class="achievement-list">
-                                        <li><img src="cred-icon.jpg" alt="CRED" class="company-icon"> SWE @ Cred</li>
+                                        <li><img src="cred-icon.jpg" alt="CRED" class="company-icon"> SWE Intern @ Cred</li>
                                         <li><img src="sharechat-icon.webp" alt="ShareChat" class="company-icon"> Backend Intern @ ShareChat</li>
                                         <li><img src="unacademy-icon.jpeg" alt="Unacademy" class="company-icon"> DSA Mentor @ Unacademy</li>
                                     </ul>
                                 </p>
-
-                                <p>
-                           
-
-                              
-
                                 <p class="cta-text">
                                     🤝 Let's connect and create something amazing!
                                 </p>
                             </div>
                             <div class="social-links">
-                                <a href="#" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                                <a href="#" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                                <a href="#" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
-                                <a href="#" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
-                                <a href="#" target="_blank" title="Resume"><i class="fas fa-file-alt"></i></a>
+                                <a href="https://github.com/adarshguptacse18" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                                <a href="https://linkedin.com/in/the-adarsh-gupta" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://x.com/adarshGupta_7" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="mailto:adarshgupta564444+portfolio@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
                             </div>
                         </div>
                     </div>
