Added blog version

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="logo">Adarsh Gupta</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">Book/Course Shelf</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">Shelf</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -76,6 +76,17 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="blog" class="blog-section">
+            <div class="container">
+                <h1>Blogs</h1>
+                <p class="subtitle">Tech articles written by me.</p>
+                
+                <div class="blog-grid" id="blogContainer">
+                    <!-- Blog cards will be dynamically inserted here -->
                 </div>
             </div>
         </section>
