--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
                 </div>
             </div>
         </section>
+
+        <section id="projects" class="projects-section">
+            <div class="container">
+                <h1>Projects</h1>
+                <p class="subtitle">Some things I've built</p>
+                <div class="projects-grid">
+                    <!-- Project cards will be dynamically inserted here -->
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
