Added talks by me

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">Shelf</a></li>
+                <li><a href="#shelf">Shelf</a></li>
+                <li><a href="#talks">Talks</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -98,6 +99,45 @@
                 <div class="projects-grid">
                     <!-- Project cards will be dynamically inserted here -->
                 </div>
+            </div>
+        </section>
+
+        <section id="shelf" class="shelf-container">
+            <h2>My Learning Shelf</h2>
+            
+            <div class="shelf-section">
+                <h3>📚 Books</h3>
+                <div id="books-list" class="shelf-items">
+                    <!-- Books will be added here dynamically -->
+                </div>
+            </div>
+
+            <div class="shelf-section">
+                <h3>📄 Articles</h3>
+                <div id="articles-list" class="shelf-items">
+                    <!-- Articles will be added here dynamically -->
+                </div>
+            </div>
+
+            <div class="shelf-section">
+                <h3>🎓 Courses</h3>
+                <div id="courses-list" class="shelf-items">
+                    <!-- Courses will be added here dynamically -->
+                </div>
+            </div>
+
+            <div class="shelf-section">
+                <h3>🎥 Videos</h3>
+                <div id="videos-list" class="shelf-items">
+                    <!-- Videos will be added here dynamically -->
+                </div>
+            </div>
+        </section>
+
+        <section id="talks" class="talks-container">
+            <h2>Talks by Me</h2>
+            <div id="talks-list" class="talks-items">
+                <!-- Talks will be added here dynamically -->
             </div>
         </section>
     </main>
