Added Collaborate with me section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@
                 <!-- Talks will be added here dynamically -->
             </div>
         </section>
+
+        <section id="collaborate" class="collaborate-container">
+            <h2>Collaborate with Me</h2>
+            <div class="collaborate-info">
+                <p>🔹 <strong>Speaking Engagements</strong> – If you'd like me to give a talk on software engineering, system design, competitive programming, or startups, feel free to reach out!</p>
+                <p>🔹 <strong>Showcasing Your Work</strong> – If you're a student or entrepreneur who has built something cool, I'd be happy to post about it on LinkedIn (I have 18K+ followers). Let's get your work the visibility it deserves!</p>
+                <p>🔹 <strong>Random Chat or Advice</strong> – If you have a question, need career guidance, or just want to discuss something interesting, feel free to reach out anytime! I love connecting with passionate people.</p>
+                <p>📩 <strong>Let's Connect!</strong> You can reach me at <a href="mailto:adarshgupta564444+collaborate@gmail.com">adarshgupta564444+collaborate@gmail.com</a> or through <a href="https://linkedin.com/in/the-adarsh-gupta" target="_blank">LinkedIn</a>/ <a href="https://twitter.com/adarshGupta_7" target="_blank">Twitter</a>.</p>
+                <p>🔗 <strong>Topmate</strong> – Connect with me on <a href="https://topmate.io/gupta_adarsh" target="_blank">Topmate</a> for more personalized interactions.</p>
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
