--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="terminal-content">
                     <div class="profile-section">
                         <div class="profile-image">
-                            <img src="dp.png" alt="Profile Picture">
+                            <img src="images/dp.png" alt="Profile Picture">
                         </div>
                         <div class="profile-text">
                             <p class="command">~ whoami</p>
@@ -60,9 +60,9 @@
                                 <p class="achievement-section">
                                     <span class="achievement-title">🏆 Previous Experience:</span>
                                     <ul class="achievement-list">
-                                        <li><img src="cred-icon.jpg" alt="CRED" class="company-icon"> SWE Intern @ Cred</li>
-                                        <li><img src="sharechat-icon.webp" alt="ShareChat" class="company-icon"> Backend Intern @ ShareChat</li>
-                                        <li><img src="unacademy-icon.jpeg" alt="Unacademy" class="company-icon"> DSA Mentor @ Unacademy</li>
+                                        <li><img src="images/cred-icon.jpg" alt="CRED" class="company-icon"> SWE Intern @ Cred</li>
+                                        <li><img src="images/sharechat-icon.webp" alt="ShareChat" class="company-icon"> Backend Intern @ ShareChat</li>
+                                        <li><img src="images/unacademy-icon.jpeg" alt="Unacademy" class="company-icon"> DSA Mentor @ Unacademy</li>
                                     </ul>
                                 </p>
                                 <p class="cta-text">
