--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#shelf">Shelf</a></li>
                 <li><a href="#talks">Talks</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#collaborate">Collaborate</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
