Adding a new page with iframe

--- a/index.html
+++ b/index.html
@@ -8,24 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <nav>
-        <div class="nav-content">
-            <div class="logo">Adarsh Gupta</div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#shelf">Shelf</a></li>
-                <li><a href="#talks">Talks</a></li>
-                <li><a href="#collaborate">Collaborate</a></li>
-            </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </nav>
+    <script src="nav.js"></script>
 
     <main>
         <section id="home" class="hero">
